rename the file for easy tracking and consistency

--- a/MachineLearning/Clustering.ipynb
+++ b/MachineLearning/Clustering.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -141,7 +141,7 @@
    ],
    "source": [
     "# Load data\n",
-    "file_name = \"Data.csv\"\n",
+    "file_name = \"Clustering.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df.head()\n",
     "# Using Freedom House political rights scores (Lower is better (1-7))"
