--- a/MachineLearning/Recycling.ipynb
+++ b/MachineLearning/Recycling.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -181,7 +181,7 @@
     "from sklearn import linear_model\n",
     "\n",
     "# Load data\n",
-    "file_name = \"Trash3.csv\"\n",
+    "file_name = \"Recycling.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df.head()"
    ]
