--- a/MachineLearning/pm25AirPredict.ipynb
+++ b/MachineLearning/pm25AirPredict.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -194,7 +194,7 @@
     "from sklearn import linear_model\n",
     "\n",
     "# Load data\n",
-    "file_name = \"pm25Predict.csv\"\n",
+    "file_name = \"pm25AirPredict.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df.head()"
    ]
